# stackyter

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  README.rst  config.yaml  environment.yml  example-config.yaml  example_config.yaml  pyproject.toml  requirements.txt  setup.py  stackyter.py
.github/workflows/: ci.yml  pypi.yml
configs/: example-config.yaml  lsst-example-config.yaml
doc/: Makefile
doc/_build/: .buildinfo  genindex.html  index.html  objects.inv  readme.html  search.html  searchindex.js
doc/_build/.doctrees/: environment.pickle  index.doctree  readme.doctree
doc/_build/_sources/: index.rst.txt
doc/source/: conf.py
src/stackyter/: __init__.py  stackyter.py
